re PR tree-optimization/63530 (GCC generates incorrect aligned store on ARM after the loop is unrolled.)

PR tree-optimization/63530
	tree-vect-data-refs.c (vect_create_addr_base_for_vector_ref): Set
	pointer alignment according to DR_MISALIGNMENT.
	gcc.dg/vect/pr63530.c: New test.

From-SVN: r216770